# Nidhogg

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Nidhogg.sln  Nidhogg.yar  README.md  add_initial_operations.py  post_compilation_operation.py  s.md
Example/: CMakeLists.txt  NidhoggExample.cpp
Nidhogg/: AntiAnalysis.cpp  AntiAnalysis.h  AntiAnalysis.hpp  AntiAnalysisHandler.cpp  AntiAnalysisHandler.h  AutoLock.h  BaseParser.cpp  BaseParser.h  CallbacksParser.cpp  CallbacksParser.h  DllInjectionParser.cpp  DllInjectionParser.h  DriverParser.cpp  DriverParser.h  EtwTiParser.cpp  EtwTiParser.h  FastMutex.cpp  FastMutex.h  FileHandler.cpp  FileHandler.h  FileHelper.cpp  FileHelper.h  FileParser.cpp  FileParser.h  FileUtils.cpp  FileUtils.h  FileUtils.hpp  InitialOperation.hpp  InjectionShellcode.hpp  IoctlShared.h  IrpHandlers.cpp  IrpHandlers.h  IrqlGuard.h  ListHelper.hpp  MemoryAllocator.hpp  MemoryHandler.cpp  MemoryHandler.h  MemoryHelper.cpp  MemoryHelper.h  MemoryHelper.hpp  (+57 more)
NidhoggClient/: AntiAnalysisHandler.cpp  AntiAnalysisHandler.h  CommandHandler.h  Convertor.hpp  FileHandler.cpp  FileHandler.h  FileHelper.hpp  Helper.cpp  Helper.h  MemoryHandler.cpp  MemoryHandler.h  NetworkHandler.cpp  NetworkHandler.h  Nidhogg.cpp  Nidhogg.h  Nidhogg.hpp  NidhoggAntiAnalysis.cpp  NidhoggClient.cpp  NidhoggClient.h  NidhoggClient.vcxproj  NidhoggClient.vcxproj.filters  NidhoggFile.cpp  NidhoggInterface.cpp  NidhoggInterface.h  NidhoggIoctls.h  NidhoggMemory.cpp  NidhoggNetwork.cpp  NidhoggProcess.cpp  NidhoggRegistry.cpp  NidhoggStructs.h  PathHelper.hpp  (+11 more)
(+6 files in other folders)
